Updated Dockerfile and pom.xml configurations
- Refactored Dockerfile using multi-stage build for better optimization.

- Added .dockerignore to exclude unnecessary files from the Docker image.

- Made version and build-related adjustments in pom.xml for compatibility and cleaner builds.

- These changes aim to support deployment on AWS EC2 and enable compatibility with Jenkins-based CI/CD pipelines.

--- a/pom.xml
+++ b/pom.xml
@@ -10,22 +10,7 @@
 	</parent>
 	<groupId>com</groupId>
 	<artifactId>whisper</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>whisper</name>
-	<description>An application where users can make rumor-based news and earn money in return.</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
+
 	<properties>
 		<java.version>17</java.version>
 		<jwt.version>0.11.5</jwt.version>
@@ -97,6 +82,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>whisper</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
